# Market-Benchmarking-and-Competitive-Analysis-Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: python-ci.yml
config/: benchmark_targets.yaml
src/market_benchmarking/: __init__.py  analysis.py  config.py  data_sources.py  pipeline.py  reporting.py
tests/: test_analysis.py
